--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <div class="container">
     <h1 id="heading">Counter</h1>
     <p id="number"></p>
+    <div class="controller">
     <button onclick="inc()" class="btn"> Increase</button>
     <button onclick="reset()"> Reset</button>
     <button onclick="dec()"> Decrease</button>
+      </div>
      </div>
     <script src="app.js"></script>
 </body>
